--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,8 @@ SOURCES = \
 	ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
 	ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
 	ft_putendl_fd.c ft_putnbr_fd.c ft_strtok.c ft_strcpy.c ft_strcat.c \
-	ft_atol.c ft_free.c ft_free_arr.c ft_isspace.c ft_strndup.c
+	ft_atol.c ft_free.c ft_free_arr.c ft_isspace.c ft_strndup.c \
+	ft_sort_array.c ft_strdup_array.c copy_char.c
 
 OBJECTS = $(SOURCES:%.c=$(OBJ_DIR)/%.o)
 
